# genai-template

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  README.md  mise.toml  pyproject.toml
.claude/commands/: gemini-review.md
.claude/commands/projects/: gemini-review.md
.devcontainer/: Dockerfile  Dockerfile.optimized  Dockerfile.original  devcontainer.json  devcontainer.original.json
.devcontainer/scripts/: setup-light.sh  setup.sh
.github/workflows/: build-devcontainer.yml
.kiro/steering/: product.md  python-quality-standards.md  structure.md  tech.md
.serena/: project.yml
